# rust-indexnow-api

./: Cargo.toml  README.md
src/: lib.rs
src/error/: mod.rs
src/http/: mod.rs
tests/: test_inspection.rs
