[package]
name = "indexnow-api"
version = "0.1.0"
edition = "2024"

authors = ["uiuifree"]
description = "IndexNow API"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
keywords = ["IndexNow", "SEO", "bing", "api"]

repository = "https://github.com/uiuifree/rust-indexnow-api"
[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
#urlencoding = { version = "2.1.0" }
# Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
